# trace-recorder-to-ctf

./: Cargo.toml  Dockerfile  LICENSE-MIT  README.md
.github/workflows/: audit.yml  ci.yml  docker.yml  release.yml
macros/: Cargo.toml
macros/src/: lib.rs
src/: convert.rs  events.rs  main.rs  types.rs
